--- a/index.html
+++ b/index.html
@@ -56,42 +56,42 @@
         <div class="carousel-inner">
 
             <div class="carousel-item active">
-                <img class="d-block w-100" src="/img/ClaraRosto.jpeg" alt="Primeiro slide">
+                <img class="d-block w-100" src="img/ClaraRosto.jpeg" alt="Primeiro slide">
                 <div class="carousel-caption">
                     <h5>"Fico pensando onde está você e se está pensando em me encontrar."</h5>
                 </div>
             </div>
 
             <div class="carousel-item">
-                <img class="d-block w-100" src="/img/ClaraXadrez.jpeg" alt="Segundoslide">
+                <img class="d-block w-100" src="img/ClaraXadrez.jpeg" alt="Segundoslide">
                 <div class="carousel-caption">
                     <h5>"Tudo mudou, depois que eu te encontrei."</h5>
                 </div>
             </div>
 
             <div class="carousel-item">
-                <img class="d-block w-100" src="/img/ClaraAsia.jpeg"alt=Terceiro slide">
+                <img class="d-block w-100" src="img/ClaraAsia.jpeg"alt=Terceiro slide">
                 <div class="carousel-caption">
                     <h5>"Fica comigo então, não me abandona não"</h5>
                 </div>
             </div>
 
             <div class="carousel-item">
-                <img class="d-block w-100" src="/img/ClaraColar.jpeg" alt="Quarto slide">
+                <img class="d-block w-100" src="img/ClaraColar.jpeg" alt="Quarto slide">
                 <div class="carousel-caption">
                     <h5>"Se não sou eu, quem vai fazer voce feliz?."</h5>
                 </div>
             </div>
 
             <div class="carousel-item">
-                <img class="d-block w-100" src="/img/ClaraEspelho1.jpeg" alt="Quinto slide">
+                <img class="d-block w-100" src="img/ClaraEspelho1.jpeg" alt="Quinto slide">
                 <div class="carousel-caption">
                     <h5>"Nem vi você mudar, nem você crescer, como pode tudo mudar..."</h5>
                 </div>
             </div>
 
             <div class="carousel-item">
-                <img class="d-block w-100" src="/img/ClaraVestido.jpeg" alt="Sexto slide">
+                <img class="d-block w-100" src="img/ClaraVestido.jpeg" alt="Sexto slide">
                 <div class="carousel-caption">
                     <h5>"Vamos viver nossos sonhos, temos tão pouco tempo, foi quando te encontrei..."</h5>
                 </div>
