--- a/index.html
+++ b/index.html
@@ -143,13 +143,13 @@
     <!--  -->
 
    <audio id="musica1" loop>
-    <source src="/sound/MeEncontra.mp3" type="audio/mp3" />
+    <source src="sound/MeEncontra.mp3" type="audio/mp3" />
 </audio>
 <audio id="musica2" loop>
-    <source src="/sound/MeuNovoMundo.mp3" type="audio/mp3" />
+    <source src="sound/MeuNovoMundo.mp3" type="audio/mp3" />
 </audio>
 <audio id="musica3" loop>
-    <source src="/sound/ProibidaPraMim.mp3" type="audio/mp3">
+    <source src="sound/ProibidaPraMim.mp3" type="audio/mp3">
 </audio>
     <div class="botoes">
         <button onclick="tocarMusica()">▶️Me Toque▶️</button>
