--- a/index.html
+++ b/index.html
@@ -105,21 +105,21 @@
             </div>
 
             <div class="carousel-item">
-                <img class="d-block w-100" src="/img/ClaraFixamente.jpeg" alt="Oitavo slide">
+                <img class="d-block w-100" src="img/ClaraFixamente.jpeg" alt="Oitavo slide">
                 <div class="carousel-caption">
                     <h5>"Mas ela vai voltar, fazer da vida oque melhor possa ser"</h5>
                 </div>
             </div>
 
             <div class="carousel-item">
-                <img class="d-block w-100" src="/img/ClaraLado.jpeg" alt="Nono slide">
+                <img class="d-block w-100" src="img/ClaraLado.jpeg" alt="Nono slide">
                 <div class="carousel-caption">
                     <h5>"Saber dar valor para as coisas mais simples, so o amor constroi pontes indestrutiveis"</h5>
                 </div>
             </div>
 
             <div class="carousel-item">
-                <img class="d-block w-100" src="/img/ClaraOculoEtecx.jpeg" alt="Décimo slide">
+                <img class="d-block w-100" src="img/ClaraOculoEtecx.jpeg" alt="Décimo slide">
                 <div class="carousel-caption">
                     <h5>"Eu nunca duvidei, eu nunca fiz aposta, eu me esforcei pra ser do jeito que ela gosta"</h5>
                 </div>
