--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
 
             <div class="carousel-item">
-                <img class="d-block w-100" src="/img/ClaraEspelho2.jpeg" alt="Sétimo slide">
+                <img class="d-block w-100" src="img/ClaraEspelho2.jpeg" alt="Sétimo slide">
                 <div class="carousel-caption">
                     <h5>"Mas só de ouvir sua voz eu ja me sinto bem"</h5>
                 </div>
