--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="home.css">
-    <link rel="icon" type="image/png" href="/coracaoico.png">
+    <link rel="icon" type="image/png" href="coracaoico.png">
 </head>
 
 
