--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
 
             <div class="carousel-item">
-                <img class="d-block w-100" src="img/ClaraAsia.jpeg"alt=Terceiro slide">
+                <img class="d-block w-100" src="img/ClaraAsia.jpeg" alt=Terceiro slide">
                 <div class="carousel-caption">
                     <h5>"Fica comigo então, não me abandona não"</h5>
                 </div>
@@ -136,25 +136,24 @@
             <span class="visually-hidden">Proxima</span>
         </a>
     </div>
-    <div class="frases">
+    <audio id="musica1" loop>
+        <source src="sound/MeEncontra.mp3" type="audio/mp3" />
+    </audio>
+    <audio id="musica2" loop>
+        <source src="sound/MeuNovoMundo.mp3" type="audio/mp3" />
+    </audio>
+    <audio id="musica3" loop>
+        <source src="sound/ProibidaPraMim.mp3" type="audio/mp3">
+    </audio>
+    <audio id="musica4" loop>
+        <source src="">
+    </audio>
 
-    </div>
-    <!--  -->
-    <!--  -->
-
-   <audio id="musica1" loop>
-    <source src="sound/MeEncontra.mp3" type="audio/mp3" />
-</audio>
-<audio id="musica2" loop>
-    <source src="sound/MeuNovoMundo.mp3" type="audio/mp3" />
-</audio>
-<audio id="musica3" loop>
-    <source src="sound/ProibidaPraMim.mp3" type="audio/mp3">
-</audio>
     <div class="botoes">
         <button onclick="tocarMusica()">▶️Me Toque▶️</button>
         <button onclick="MsgTexto()">❤️‍🔥 Mensagem Especial ❤️‍🔥</button>
         <button onclick="TempoDeAmor()">💝 Tempo de Amor 💝</button>
+        <button onclick="Juntos()">💗Nosso Tempo Juntos💗</button>
     </div>
 
     <div id="declaracaoamor" class="declaracaoamor">
@@ -168,6 +167,11 @@
         Independente do que aconteça com você ou de como você esteja, eu vou estar com você e para você para tudo que
         precisar. <br><strong>EU AMO VOCÊ.</strong><br>
         "De qualquer jeito, seu sorriso vai ser meu raio de sol."" 💖
+    </div>
+
+    <div id="mensagemjuntos" class="mensagemjuntos">
+        Olá minha linda pessoinha, deixei aqui como um espaço separado do seu pq aqui é aonode pretendo deixar todos nossos registros, por enquanto ele vai estar sim bem limitado, mas futuramente vai ter tanta coisa aqui que talvez voce enjoe de tanta coisa kakakakka. <p></p>
+        
     </div>
 
     <div id="mensagemTempo" class="mensagemTempo"></div>
