--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
  essa é uma anotação que quero deixar aqui como uma lembrança da garota linda e carinhosa que você é e tive o prazer de conversar,
  essa mensagem foi feita no dia 24/09/2025 as 19:24. Eu realmente amo você de verdade, você foi a primeira garota que me fez ir tão longe assim, espero que fiquemos juntos no futuro e que eu possa estar ao seu lado nessa vida ate o final
  Te amo desde a primeira vista em 02/02/2024, não sei se dara certo, mas caso infelizmente para mim você não seja o mesmo, ainda assim foi uma otima fase de minha vida
- Obrigado, Clara.  -->
+ Obrigado, Clara.
+ Bem, deu certo, estou voltando aqui dia 25/10/25 extremamente feliz pq estamos juntos desde de 03/10/25, estou com a mulher da minha vida que sempre sonhei S2  -->
 
 <body>
     <div class="header">
@@ -70,7 +71,7 @@
             </div>
 
             <div class="carousel-item">
-                <img class="d-block w-100" src="img/ClaraAsia.jpeg" alt=Terceiro slide">
+                <img class="d-block w-100" src="img/ClaraAsia.jpeg" alt="Terceiro slide">
                 <div class="carousel-caption">
                     <h5>"Fica comigo então, não me abandona não"</h5>
                 </div>
@@ -146,7 +147,7 @@
         <source src="sound/ProibidaPraMim.mp3" type="audio/mp3">
     </audio>
     <audio id="musica4" loop>
-        <source src="">
+        <source src="sound/Só Por Uma Noite (Ao Vivo) [X-HPWyc90YY].mp3" type="audio/mp3">
     </audio>
 
     <div class="botoes">
@@ -170,8 +171,19 @@
     </div>
 
     <div id="mensagemjuntos" class="mensagemjuntos">
-        Olá minha linda pessoinha, deixei aqui como um espaço separado do seu pq aqui é aonode pretendo deixar todos nossos registros, por enquanto ele vai estar sim bem limitado, mas futuramente vai ter tanta coisa aqui que talvez voce enjoe de tanta coisa kakakakka. <p></p>
-        
+        Olá minha linda pessoinha, deixei aqui como um espaço separado do seu pq aqui é aonode pretendo deixar todos
+        nossos registros, por enquanto ele vai estar sim bem limitado, mas futuramente vai ter tanta coisa aqui que
+        talvez voce enjoe de tanta coisa kakakakka.
+        Essa é o nosso começo de tudo, pouco, mas eu amei esses primeiros passos de coisas maiores que virão, é tao
+        Clara que a minha visão quando penso que nos estamos juntos e nunca iremos nos deixar... <p></p>
+
+        <div class="containerfotos">
+            <img src="/img/moes.jpeg" alt="moes" class="moes">
+            <div class="moesmensagem">
+                Seremos donos do nosso amanhã se estivermos unidos em sintonia com os nossos sonhos...
+                <p>22/10/25</p>
+            </div>
+        </div>
     </div>
 
     <div id="mensagemTempo" class="mensagemTempo"></div>
