--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         Clara que a minha visão quando penso que nos estamos juntos e nunca iremos nos deixar... <p></p>
 
         <div class="containerfotos">
-            <img src="/img/moes.jpeg" alt="moes" class="moes">
+            <img src="img/moes.jpeg" alt="moes" class="moes">
             <div class="moesmensagem">
                 Seremos donos do nosso amanhã se estivermos unidos em sintonia com os nossos sonhos...
                 <p>22/10/25</p>
