--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7"></li>
             <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8"></li>
             <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9"></li>
+            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10"></li>
         </ol>
 
         <div class="carousel-inner">
@@ -126,6 +127,14 @@
                 </div>
             </div>
 
+
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="img/ClaraRostooo.jpeg" alt="Decimo Primeiro slide">
+                <div class="carousel-caption">
+                    <h5>"Você é tão cheia de vida, ninguem resiste a você"</h5>
+                </div>
+            </div>
+
         </div>
 
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
@@ -180,7 +189,7 @@
         <div class="containerfotos">
             <img src="img/moes.jpeg" alt="moes" class="moes">
             <div class="moesmensagem">
-                Seremos donos do nosso amanhã se estivermos unidos em sintonia com os nossos sonhos...
+                "Seremos donos do nosso amanhã se estivermos unidos em sintonia com os nossos sonhos..."
                 <p>22/10/25</p>
             </div>
         </div>
