--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>
 
 
-            <div class="carousel-item active">
+            <div class="carousel-item">
                 <img class="d-block w-100" src="img/ClaraRostooo.jpeg" alt="Decimo Primeiro slide">
                 <div class="carousel-caption">
                     <h5>"Você é tão cheia de vida, ninguem resiste a você"</h5>
