--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Para Clara ❤️</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link
-        href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Source+Code+Pro:ital,wght@0,300;0,600;1,300&display=swap"
         rel="stylesheet">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -17,190 +18,200 @@
     <link rel="icon" type="image/png" href="img/coracaoico.png">
 </head>
 
-
 <body>
-    <div class="header">
-        <h1>Nosso Cantinho Do Amor</h1>
-    </div>
 
-    <div class="heart">❤️</div>
-    <h2>Te amo, minha Vida, Clara!</h2>
+    <div class="bg-overlay"></div>
 
-    <div class="mensagem">
-        Esse presentinho é simples, mas feito com todo meu amor e carinho só pra você.
-        Obrigado por ser a luz que ilumina meus dias. Espero que nunca percamos a proximidade e contato. Tu é realmente
-        muito especial pra mim.
-        <p><strong>AMO TE MUCHO! 💖</strong></p>
-    </div>
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-wrap="true">
-
-        <ol class="carousel-indicators">
-            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
-            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
-            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
-            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"></li>
-            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"></li>
-            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"></li>
-            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6"></li>
-            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7"></li>
-            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8"></li>
-            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9"></li>
-            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10"></li>
-        </ol>
-
-        <div class="carousel-inner">
-
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="img/ClaraRosto.jpeg" alt="Primeiro slide">
-                <div class="carousel-caption">
-                    <h5>"Fico pensando onde está você e se está pensando em me encontrar."</h5>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img class="d-block w-100" src="img/ClaraXadrez.jpeg" alt="Segundoslide">
-                <div class="carousel-caption">
-                    <h5>"Tudo mudou, depois que eu te encontrei."</h5>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img class="d-block w-100" src="img/ClaraAsia.jpeg" alt="Terceiro slide">
-                <div class="carousel-caption">
-                    <h5>"Fica comigo então, não me abandona não"</h5>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img class="d-block w-100" src="img/ClaraColar.jpeg" alt="Quarto slide">
-                <div class="carousel-caption">
-                    <h5>"Se não sou eu, quem vai fazer voce feliz?."</h5>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img class="d-block w-100" src="img/ClaraEspelho1.jpeg" alt="Quinto slide">
-                <div class="carousel-caption">
-                    <h5>"Nem vi você mudar, nem você crescer, como pode tudo mudar..."</h5>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img class="d-block w-100" src="img/ClaraVestido.jpeg" alt="Sexto slide">
-                <div class="carousel-caption">
-                    <h5>"Vamos viver nossos sonhos, temos tão pouco tempo, foi quando te encontrei..."</h5>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img class="d-block w-100" src="img/ClaraEspelho2.jpeg" alt="Sétimo slide">
-                <div class="carousel-caption">
-                    <h5>"Mas só de ouvir sua voz eu ja me sinto bem"</h5>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img class="d-block w-100" src="img/ClaraFixamente.jpeg" alt="Oitavo slide">
-                <div class="carousel-caption">
-                    <h5>"Mas ela vai voltar, fazer da vida oque melhor possa ser"</h5>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img class="d-block w-100" src="img/ClaraLado.jpeg" alt="Nono slide">
-                <div class="carousel-caption">
-                    <h5>"Saber dar valor para as coisas mais simples, so o amor constroi pontes indestrutiveis"</h5>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img class="d-block w-100" src="img/ClaraOculoEtecx.jpeg" alt="Décimo slide">
-                <div class="carousel-caption">
-                    <h5>"Eu nunca duvidei, eu nunca fiz aposta, eu me esforcei pra ser do jeito que ela gosta"</h5>
-                </div>
-            </div>
-
-
-            <div class="carousel-item">
-                <img class="d-block w-100" src="img/ClaraRostooo.jpeg" alt="Decimo Primeiro slide">
-                <div class="carousel-caption">
-                    <h5>"Você é tão cheia de vida, ninguem resiste a você"</h5>
-                </div>
-            </div>
-
+    <main class="container-principal">
+        <div class="header">
+            <h1>Nosso Cantinho Do Amor</h1>
         </div>
 
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Anterior</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Proxima</span>
-        </a>
-    </div>
-    <audio id="musica1" loop>
-        <source src="sound/MeEncontra.mp3" type="audio/mp3" />
-    </audio>
-    <audio id="musica2" loop>
-        <source src="sound/MeuNovoMundo.mp3" type="audio/mp3" />
-    </audio>
-    <audio id="musica3" loop>
-        <source src="sound/ProibidaPraMim.mp3" type="audio/mp3">
-    </audio>
-    <audio id="musica4" loop>
-        <source src="sound/Só Por Uma Noite (Ao Vivo) [X-HPWyc90YY].mp3" type="audio/mp3">
-    </audio>
+        <div class="heart">❤️</div>
 
-    <div class="botoes">
-        <button onclick="tocarMusica()">▶️Me Toque▶️</button>
-        <button onclick="MsgTexto()">❤️‍🔥 Mensagem Especial ❤️‍🔥</button>
-        <button onclick="TempoDeAmor()">💝 Tempo de Amor 💝</button>
-        <button onclick="Juntos()">💗Nosso Tempo Juntos💗</button>
-    </div>
+        <h2>Te amo, minha Vida, Clara!</h2>
 
-    <div id="declaracaoamor" class="declaracaoamor">
-        Olá meu amorzinho, acabei demorando um pouco para poder deixar isso da forma que eu gostaria, mas ainda trabalho
-        no nosso Cantinho para deixar ele tao belo quanto você, ele é algo nosso que vai ser melhorado ate o final de
-        nossa vida com nossos momentos futuros.<p></p>
-        "Dona do meu pensamento, você nossa historia..."" 💖
-    </div>
+        <div class="mensagem glass-card">
+            <p>
+                Esse presentinho é simples, mas feito com todo meu amor e carinho só pra você.
+                Obrigado por ser a luz que ilumina meus dias. Espero que nunca percamos a proximidade e contato.
+                Tu é realmente muito especial pra mim.
+            </p>
+            <p class="destaque-rosa">AMO TE MUCHO! 💖</p>
+        </div>
 
-    <div id="mensagemEspecial" class="mensagemEspecial">
-        Independente do que aconteça com você ou de como você esteja, eu vou estar com você e para você para tudo que
-        precisar. <br><strong>EU AMO VOCÊ.</strong><br>
-        "De qualquer jeito, seu sorriso vai ser meu raio de sol."" 💖
-    </div>
+        <div id="carouselExampleIndicators" class="carousel slide glass-card-carousel" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                    class="active"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10"></button>
+            </div>
 
-    <div id="mensagemjuntos" class="mensagemjuntos">
-        Olá minha linda pessoinha, deixei aqui como um espaço separado do seu pq aqui é aonode pretendo deixar todos
-        nossos registros, por enquanto ele vai estar sim bem limitado, mas futuramente vai ter tanta coisa aqui que
-        talvez voce enjoe de tanta coisa kakakakka.
-        Essa é o nosso começo de tudo, pouco, mas eu amei esses primeiros passos de coisas maiores que virão, é tao
-        Clara que a minha visão quando penso que nos estamos juntos e nunca iremos nos deixar... <p></p>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/ClaraRosto.jpeg" alt="Clara">
+                    <div class="carousel-caption">
+                        <h5>"Fico pensando onde está você e se está pensando em me encontrar."</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/ClaraXadrez.jpeg" alt="Clara">
+                    <div class="carousel-caption">
+                        <h5>"Tudo mudou, depois que eu te encontrei."</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/ClaraAsia.jpeg" alt="Clara">
+                    <div class="carousel-caption">
+                        <h5>"Fica comigo então, não me abandona não"</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/ClaraColar.jpeg" alt="Clara">
+                    <div class="carousel-caption">
+                        <h5>"Se não sou eu, quem vai fazer voce feliz?"</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/ClaraEspelho1.jpeg" alt="Clara">
+                    <div class="carousel-caption">
+                        <h5>"Nem vi você mudar, nem você crescer, como pode tudo mudar..."</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/ClaraVestido.jpeg" alt="Clara">
+                    <div class="carousel-caption">
+                        <h5>"Vamos viver nossos sonhos, temos tão pouco tempo..."</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/ClaraEspelho2.jpeg" alt="Clara">
+                    <div class="carousel-caption">
+                        <h5>"Mas só de ouvir sua voz eu ja me sinto bem"</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/ClaraFixamente.jpeg" alt="Clara">
+                    <div class="carousel-caption">
+                        <h5>"Mas ela vai voltar, fazer da vida o que melhor possa ser"</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/ClaraLado.jpeg" alt="Clara">
+                    <div class="carousel-caption">
+                        <h5>"Saber dar valor para as coisas mais simples..."</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/ClaraOculoEtecx.jpeg" alt="Clara">
+                    <div class="carousel-caption">
+                        <h5>"Eu me esforcei pra ser do jeito que ela gosta"</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/ClaraRostooo.jpeg" alt="Clara">
+                    <div class="carousel-caption">
+                        <h5>"Você é tão cheia de vida, ninguem resiste a você"</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/CraraLaduOiandinho.jpeg" alt="Clara">
+                    <div class="carousel-caption">
+                        <h5>"Vivo pra ser feliz, não vivo pra ser comum..."</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/Crarasueter.jpeg" alt="Clara">
+                    <div class="carousel-caption">
+                        <h5>"Uma vida sem amor é uma vida sem sentido
+                            Estarei feliz aonde for se você estiver comigo"</h5>
+                    </div>
+                </div>
+            </div>
 
-        <div class="containerfotos">
-            <img src="img/moes.jpeg" alt="moes" class="moes">
-            <div class="moesmensagem">
-                "Seremos donos do nosso amanhã se estivermos unidos em sintonia com os nossos sonhos..."
-                <p>22/10/25</p>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Próxima</span>
+            </button>
+        </div>
+
+        <div class="audios-hidden">
+            <audio id="musica1" loop>
+                <source src="sound/MeEncontra.mp3" type="audio/mp3" />
+            </audio>
+            <audio id="musica2" loop>
+                <source src="sound/MeuNovoMundo.mp3" type="audio/mp3" />
+            </audio>
+            <audio id="musica3" loop>
+                <source src="sound/ProibidaPraMim.mp3" type="audio/mp3">
+            </audio>
+            <audio id="musica4" loop>
+                <source src="sound/Só Por Uma Noite (Ao Vivo) [X-HPWyc90YY].mp3" type="audio/mp3">
+            </audio>
+        </div>
+
+        <div class="botoes">
+            <button onclick="tocarMusica()">▶️ Me Toque ▶️</button>
+            <button onclick="MsgTexto()">❤️‍🔥 Mensagem Especial ❤️‍🔥</button>
+            <button onclick="TempoDeAmor()">💝 Tempo de Amor 💝</button>
+            <button onclick="Juntos()">💗 Nosso Tempo Juntos 💗</button>
+        </div>
+
+        <div id="declaracaoamor" class="conteudo-extra glass-card">
+            <p>Olá meu amorzinho, acabei demorando um pouco para poder deixar isso da forma que eu gostaria, mas ainda
+                trabalho no nosso Cantinho para deixar ele tão belo quanto você.</p>
+            <p class="citation">"Dona do meu pensamento, você é nossa história..." 💖</p>
+        </div>
+
+        <div id="mensagemEspecial" class="conteudo-extra glass-card">
+            <p>Independente do que aconteça com você ou de como você esteja, eu vou estar com você e para você para tudo
+                que precisar.</p>
+            <p class="destaque-rosa">EU AMO VOCÊ.</p>
+            <p class="citation">"De qualquer jeito, seu sorriso vai ser meu raio de sol." 💖</p>
+        </div>
+
+        <div id="mensagemjuntos" class="conteudo-extra glass-card">
+            <p>Olá minha linda pessoinha, deixei aqui como um espaço separado do seu pq aqui é onde pretendo deixar
+                todos nossos registros...</p>
+            <div class="containerfotos">
+                <figure>
+                    <img src="img/moes.jpeg" alt="Nossas mãos" class="foto-polaroid">
+                    <figcaption>
+                        "Seremos donos do nosso amanhã se estivermos unidos em sintonia com os nossos sonhos..."
+                        <br><small>22/10/25</small>
+                    </figcaption>
+                </figure>
             </div>
         </div>
-    </div>
 
-    <div id="mensagemTempo" class="mensagemTempo"></div>
+        <div id="mensagemTempo" class="conteudo-extra glass-card"></div>
+
+    </main>
+
+    <footer>
+        <div class="glass-footer">
+            <h4>Feito com todo o carinho do mundo para a garota que mais amo.</h4>
+            <p>"Eu te encontrei e você me encontrou, Clara. A minha razão de viver."</p>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="home.js"></script>
-
-    <footer>
-        <h4>Feito com todo o carinho do mundo para garota que mais amo e amei na minha vida toda, ficaremos juntos a
-            vida toda.
-            <p>"viver para alguem que me ama e dividir sempre felicidade e amor entao me encontra ou deixa eu te
-                encontrar, eu te econtrei e você me encontrou, Clara, A minha razão de viver e continuar vivendo"</p>
-        </h4>
-    </footer>
-
 </body>
 
 </html>
