--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="11"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="12"></button>
             </div>
 
             <div class="carousel-inner">
