--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
 </head>
 
 <body>
-
+<!-- Oi Clara, futuramente não sei se minha vontade realmente vai dar certo,
+ essa é uma anotação que quero deixar aqui como uma lembrança da garota linda e carinhosa que você é e tive o prazer de conversar,
+ essa mensagem foi feita no dia 24/09/2025 as 19:24. Eu realmente amo você de verdade, você foi a primeira garota que me fez ir tão longe assim, espero que fiquemos juntos no futuro e que eu possa estar ao seu lado nessa vida ate o final
+ Te amo desde a primeira vista em 02/02/2024, não sei se dara certo, mas caso infelizmente para mim você não seja o mesmo, ainda assim foi uma otima fase de minha vida
+ Obrigado, Clara.
+ Bem, deu certo, estou voltando aqui dia 25/10/25 extremamente feliz pq estamos juntos desde de 03/10/25, estou com a mulher da minha vida que sempre sonhei S2  -->
+<!-- Voltando novamente aqui, 2 meses juntos com a mulher que mais amo, amei na minha vida, registrado em 08/12/25, voltarei no notal e ano novo! -->
     <div class="bg-overlay"></div>
 
     <main class="container-principal">
@@ -56,6 +62,8 @@
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="11"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="12"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="13"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></button>
             </div>
 
             <div class="carousel-inner">
@@ -133,6 +141,20 @@
                 </div>
                 <div class="carousel-item">
                     <img src="img/Crarasueter.jpeg" alt="Clara">
+                    <div class="carousel-caption">
+                        <h5>"Uma vida sem amor é uma vida sem sentido
+                            Estarei feliz aonde for se você estiver comigo"</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/CraraZara.jpeg" alt="Clara">
+                    <div class="carousel-caption">
+                        <h5>"Uma vida sem amor é uma vida sem sentido
+                            Estarei feliz aonde for se você estiver comigo"</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/CraraAposZara.jpeg" alt="Clara">
                     <div class="carousel-caption">
                         <h5>"Uma vida sem amor é uma vida sem sentido
                             Estarei feliz aonde for se você estiver comigo"</h5>
