--- a/index.html
+++ b/index.html
@@ -149,15 +149,13 @@
                 <div class="carousel-item">
                     <img src="img/CraraZara.jpeg" alt="Clara">
                     <div class="carousel-caption">
-                        <h5>"Uma vida sem amor é uma vida sem sentido
-                            Estarei feliz aonde for se você estiver comigo"</h5>
+                        <h5>"Viva para ser feliz, não para ser em vão"</h5>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="img/CraraAposZara.jpeg" alt="Clara">
                     <div class="carousel-caption">
-                        <h5>"Uma vida sem amor é uma vida sem sentido
-                            Estarei feliz aonde for se você estiver comigo"</h5>
+                        <h5>"Então vamos viver, um dia a gente se encontra"</h5>
                     </div>
                 </div>
             </div>
