--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
 </head>
 
 <body>
-<!-- Oi Clara, futuramente não sei se minha vontade realmente vai dar certo,
+    <!-- Oi Clara, futuramente não sei se minha vontade realmente vai dar certo,
  essa é uma anotação que quero deixar aqui como uma lembrança da garota linda e carinhosa que você é e tive o prazer de conversar,
  essa mensagem foi feita no dia 24/09/2025 as 19:24. Eu realmente amo você de verdade, você foi a primeira garota que me fez ir tão longe assim, espero que fiquemos juntos no futuro e que eu possa estar ao seu lado nessa vida ate o final
  Te amo desde a primeira vista em 02/02/2024, não sei se dara certo, mas caso infelizmente para mim você não seja o mesmo, ainda assim foi uma otima fase de minha vida
  Obrigado, Clara.
  Bem, deu certo, estou voltando aqui dia 25/10/25 extremamente feliz pq estamos juntos desde de 03/10/25, estou com a mulher da minha vida que sempre sonhei S2  -->
-<!-- Voltando novamente aqui, 2 meses juntos com a mulher que mais amo, amei na minha vida, registrado em 08/12/25, voltarei no notal e ano novo! -->
+    <!-- Voltando novamente aqui, 2 meses juntos com a mulher que mais amo, amei na minha vida, registrado em 08/12/25, voltarei no notal e ano novo! -->
+    <!-- Demorei, mas voltei aqui, estamos indo para os 5 meses dia 3, eu amo cada momento que tenho com voce, voce é tao especial para mim clara, eu so preciso de voce, eu vou te amar pra sempre e nunca soltar sua mão. Mensagem resgistrada no dia 27/02/2026 19:23 -->
     <div class="bg-overlay"></div>
 
     <main class="container-principal">
@@ -216,6 +217,15 @@
                     <figcaption>
                         "Seremos donos do nosso amanhã se estivermos unidos em sintonia com os nossos sonhos..."
                         <br><small>22/10/25</small>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="containerfotos">
+                <figure>
+                    <img src="img/casados.jpeg" alt="Nossas mãos" class="foto-polaroid">
+                    <figcaption>
+                        "Quero esperar pelo amanhecer, quero ver o por do sol refletir em você, minha mulher..."
+                        <br><small>12/02/26</small>
                     </figcaption>
                 </figure>
             </div>
